<?xml version="1.0"?>
<package>
  <name>moveit_kinematic_reachability</name>
  <version>0.0.0</version>
  <description>The moveit_kinematic_reachability package</description>
  
  <maintainer email="disam@todo.todo">disam</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

   <run_depend>python-h5py</run_depend>
   <run_depend>python-tk</run_depend>

</package>
